--- a/my_ur10e_custom_description/config/ur10e_controllers.yaml
+++ b/my_ur10e_custom_description/config/ur10e_controllers.yaml
@@ -5,18 +5,29 @@ controller_manager:
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
-    forward_position_controller:
-        type: forward_command_controller/ForwardCommandController
+    joint_trajectory_controller:
+        type: joint_trajectory_controller/JointTrajectoryController
 
-forward_position_controller:
+joint_trajectory_controller:
   ros__parameters:
     joints:
+      - lift_joint
       - shoulder_pan_joint
       - shoulder_lift_joint
       - elbow_joint
       - wrist_1_joint
       - wrist_2_joint
       - wrist_3_joint
-      - lift_joint
-    interface_name: position
+    command_interfaces:
+      - position
+
+    state_interfaces:
+      - position
+      - velocity
+
+    state_publish_rate: 50.0
+    action_monitor_rate: 20.0
+
+    allow_partial_joints_goal: false
+    open_loop_control: true
 
